--- a/src/main/resources/html/LoginPage.HTML
+++ b/src/main/resources/html/LoginPage.HTML
@@ -23,10 +23,12 @@
         <main>
             <div id="navBar">
                 |
-                <a href="./LoginPage.HTML">Pagina de Login</a> |
+                <a href="./LoginPage.HTML">Login</a> |
                 <a href="./UserCRUD.html">Usuários</a> |
-                <a href="./ClientCRUD.html">Clientes</a> |
-                <a href="#" id="despesasLink" onclick="acessarDespesas()">Despesas</a> |
+                <a href="./CreditorCRUD.html">Credores</a> |
+                <a href="./AddressCRUD.html">Bases</a> |
+                <a href="./ExpenseCRUD.html">Despesas</a> |
+                <a href="./EntryCRUD.html">Lançamentos</a> |
             </div>
 
             <div id="testContent">
@@ -93,8 +95,8 @@
                             </div>
                         </div>
 
-                        <div class="form-container hidden" id="signupForm">
-                            <!-- <style>
+                        <!-- <div class="form-container hidden" id="signupForm">
+                             <style>
                                 #criarConta {
                                     padding: 10px 20px;
                                     background-color: #04911b;
@@ -120,7 +122,7 @@
                                 #showLoginForm:hover {
                                     background-color: #cf0606;
                                 }
-                            </style> -->
+                            </style>
                             <div>
                                 <label for="signupNome" id="textlogin">Nome</label>
                                 <input type="text" id="signupNome">
@@ -180,7 +182,7 @@
                                     toggleForms();
                                 }
                             }
-                        </script>
+                        </script> -->
 
                     </div>
                 </div>
