--- a/src/main/resources/html/LoginPage.HTML
+++ b/src/main/resources/html/LoginPage.HTML
@@ -90,8 +90,7 @@
                             </div>
                             <div>
                                 <button id="efetuarLogin" onclick="login()">Login</button>
-                                <button id="showSignupForm" onclick="toggleForms()">Criar Conta</button>
-
+                                <a href="">Esqueci minha senha</a>
                             </div>
                         </div>
 
