Map Login e Address

--- a/src/main/resources/html/AddressCRUD.html
+++ b/src/main/resources/html/AddressCRUD.html
@@ -62,8 +62,8 @@
                           <option value="N">Não</option>
                         </select><br>
                     
-                        <button type="button" onclick="addBase()">Adicionar Base</button>
-                        <button type="button" onclick="updateBase()">Atualizar Base</button>
+                        <button id="adicionarBase" type="button" onclick="addBase()">Adicionar Base</button>
+                        <button id="atualizarBase" type="button" onclick="updateBase()">Atualizar Base</button>
                       </form>
                     
                       <h2>Lista de Bases</h2>
