--- a/src/main/resources/html/LoginPage.HTML
+++ b/src/main/resources/html/LoginPage.HTML
@@ -40,10 +40,10 @@
                         <div class="form-container" id="loginForm">
                             
                             <div>
-                                <label for="loginUsuario" id="textlogin">Login</label>
+                                <label for="loginUsuario">Login</label>
                                 <input type="text" id="loginUsuario">
     
-                                <label for="senhaUsuario" id="textlogin">Senha</label>
+                                <label for="senhaUsuario">Senha</label>
                                 <input type="password" id="senhaUsuario">
 
                             </div>
