--- a/src/main/resources/html/ExpenseCRUD.html
+++ b/src/main/resources/html/ExpenseCRUD.html
@@ -53,8 +53,8 @@
                           <option value="N">Não</option>
                         </select><br>
                     
-                        <button type="button" onclick="addDespesa()">Adicionar Despesa</button>
-                        <button type="button" onclick="updateDespesa()">Atualizar Despesa</button>
+                        <button id="adicionarDespesa" type="button" onclick="addDespesa()">Adicionar Despesa</button>
+                        <button id="atualizarDespesa" type="button" onclick="updateDespesa()">Atualizar Despesa</button>
                       </form>
                     
                       <h2>Lista de Despesas</h2>
