--- a/src/main/resources/html/CreditorCRUD.html
+++ b/src/main/resources/html/CreditorCRUD.html
@@ -55,8 +55,8 @@
                               <option value="N">Não</option>
                             </select><br>
                         
-                            <button type="button" onclick="addCredor()">Adicionar Credor</button>
-                            <button type="button" onclick="updateCredor()">Atualizar Credor</button>
+                            <button id="adicionarCredor" type="button" onclick="addCredor()">Adicionar Credor</button>
+                            <button id="atualizarCredor" type="button" onclick="updateCredor()">Atualizar Credor</button>
                           </form>
                         
                           <h2>Lista de Credores</h2>
