Map Usuarios Expense correção

--- a/src/main/resources/html/UserCRUD.html
+++ b/src/main/resources/html/UserCRUD.html
@@ -61,8 +61,8 @@
                               <option value="N">Não</option>
                             </select><br>
                         
-                            <button type="button" onclick="addUsuario()">Adicionar Usuário</button>
-                            <button type="button" onclick="updateUsuario()">Atualizar Usuário</button>
+                            <button id="adicionarUsuario" type="button" onclick="addUsuario()">Adicionar Usuário</button>
+                            <button id="atualizarUsuario" type="button" onclick="updateUsuario()">Atualizar Usuário</button>
                           </form>
                         
                           <h2>Lista de Usuários</h2>
