--- a/src/main/resources/html/LoginPage.html
+++ b/src/main/resources/html/LoginPage.html
@@ -23,7 +23,7 @@
         <main>
             <div id="navBar">
                 |
-                <a href="./LoginPage.HTML">Login</a> |
+                <a href="LoginPage.html">Login</a> |
                 <a href="./UserCRUD.html">Usuários</a> |
                 <a href="./CreditorCRUD.html">Credores</a> |
                 <a href="./AddressCRUD.html">Bases</a> |
